增加网络可达性校验工具